# sark

./: .czarina-analysis-prompt.md  .czarina-analysis-response.json  .dockerignore  .editorconfig  .env.example  .env.home.example  .env.production.example  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  =0.30.0  AUTH_PROVIDER_TEST_IMPROVEMENTS.md  BUILD_ATTEMPT_LOG.md  BUILD_STATUS.md  CHANGELOG.md  CODEBASE_REVIEW_2025-11-29.md  CODE_REVIEW.md  CODE_REVIEW_ENGINEER1.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COPYRIGHT  CRITICAL_ANALYSIS_RESPONSE.md  CZAR_INSTRUCTIONS.md  CZAR_SESSION_2_KICKOFF.md  Cargo.toml  DOCS-1_SESSION_4_STATUS.md  DOCS2_SESSION4_COMPLETE.md  DOCUMENTATION_COMPLETION_REPORT.md  Dockerfile  Dockerfile.production  ENGINEER1_BONUS_TASKS_STATUS.md  ENGINEER2_HTTP_ADAPTER_COMPLETION.md  ENGINEER2_SESSION5_HTTP_ADAPTER_VALIDATION.md  ENGINEER3_GRPC_ADAPTER_COMPLETION.md  ENGINEER3_SESSION7_STANDBY.md  ENGINEER4_FEDERATION_COMPLETION_REPORT.md  ENGINEER4_SESSION2_REPORT.md  ENGINEER4_SESSION4_STATUS.md  (+74 more)
.czarina/: .worker-init  IMPROVEMENT_PLAN.md  INTEGRATION_COMPLETION.md  README.md  TASK1_COMPLETE.md  TASK2_COMPLETE.md  config.json  v1.2.0-completion-config.json
.github/: PULL_REQUEST_TEMPLATE.md  REPOSITORY_SETUP.md  dependabot.yml  pull_request_template.md
.orchestrator/: README.md  daily_report_template.md  status.json
ADVANCED_OPA_POLICIES/: index.html
ALL_WORKERS_STATUS_AND_PLANS/: index.html
API_INTEGRATION/: index.html
API_KEYS/: index.html
API_REFERENCE/: index.html
ARCHITECTURE/: index.html
ARCHITECTURE_VISION/: index.html
AUDIT_COMPLIANCE/: index.html
AUTHENTICATION/: index.html
AUTHORIZATION/: index.html
AUTH_QA_BUGS_AND_FIXES/: index.html
BENCHMARK_DEPLOYMENT/: index.html
COMPLETE_WORKERS_OMNIBUS/: index.html
CROSS_COMPILATION/: index.html
DATABASE_MIGRATIONS/: index.html
DATABASE_OPTIMIZATION/: index.html
DEMO_MATERIALS_GUIDE/: index.html
DEPLOYMENT/: index.html
DEPLOYMENT_CHECKLIST/: index.html
DEVELOPMENT/: index.html
DEVELOPMENT_LOG/: index.html
DISASTER_RECOVERY/: index.html
DOCKER_COMPOSE_MIGRATION_COMPLETE/: index.html
DOCKER_DEPLOYMENT/: index.html
DOCKER_PROFILES/: index.html
EMBEDDED_DEPLOYMENT/: index.html
ENGINEER4_BONUS_IMPLEMENTATION/: index.html
ENGINEER4_MONITORING_COMPLETION/: index.html
ENGINEER_3_COMPLETION_SUMMARY/: index.html
EXECUTIVE_SUMMARY/: index.html
FAQ/: index.html
FEATURES/: index.html
FINAL_OMNIBUS_ALL_WORKERS/: index.html
FINAL_TEST_REPORT/: index.html
FRONTEND_TESTING/: index.html
GAP_ANALYSIS/: index.html
GETTING_STARTED_5MIN/: index.html
GLOSSARY/: index.html
IMPLEMENTATION_PLAN/: index.html
INCIDENT_RESPONSE/: index.html
INDEX/: index.html
INTEGRATION_TESTING/: index.html
KNOWN_ISSUES/: index.html
LDAP_SETUP/: index.html
LEARNING_PATH/: index.html
LESSONS_LEARNED/: index.html
MCP_GATEWAY_INTEGRATION_PLAN/: index.html
MCP_INTRODUCTION/: index.html
MCP_REFERENCE_AUDIT/: index.html
MIGRATION_GUIDE/: index.html
MIGRATION_v1_to_v2/: index.html
MONITORING/: index.html
MONITORING_SETUP/: index.html
NEXT_STEPS_AFTER_MERGE/: index.html
NEXT_STEPS_v1.6.0_PLAN/: index.html
OIDC_SETUP/: index.html
OMNIBUS_ALL_WORKERS_FINAL/: index.html
OMNIBUS_MERGE_SUMMARY/: index.html
ONBOARDING_CHECKLIST/: index.html
OPA_POLICY_GUIDE/: index.html
OPENAPI_SPEC_REVIEW/: index.html
OPERATIONAL_RUNBOOK/: index.html
OPERATIONS_RUNBOOK/: index.html
PERFORMANCE/: index.html
PERFORMANCE_BENCHMARKS/: index.html
PERFORMANCE_OPTIMIZATION/: index.html
PERFORMANCE_REPORT/: index.html
PERFORMANCE_TESTING/: index.html
PERFORMANCE_TUNING/: index.html
PHASE2_3WEEK_PLAN/: index.html
PHASE2_COMPLETION_REPORT/: index.html
PHASE2_DAY3_TESTING_BENCHMARKS/: index.html
POLICY_AUDIT_GUIDE/: index.html
POLICY_AUDIT_TRAIL/: index.html
POLICY_CACHING/: index.html
POLICY_OPTIMIZATION/: index.html
POLICY_PERFORMANCE_REPORT/: index.html
POLICY_PERFORMANCE_VALIDATION/: index.html
POLICY_VALIDATION/: index.html
PRE_V2.0.0_VALIDATION_STATUS/: index.html
PRODUCTION_CONFIG/: index.html
PRODUCTION_DEPLOYMENT/: index.html
PRODUCTION_HANDOFF/: index.html
PRODUCTION_READINESS/: index.html
PROJECT_CHARTS/: index.html
PROJECT_REPORT/: index.html
QUICKSTART/: index.html
QUICK_REFERENCE_SESSIONS/: index.html
QUICK_START/: index.html
REDIS_OPTIMIZATION/: index.html
RELEASE_NOTES_v0.2.0/: index.html
REPOSITORY_IMPROVEMENT_PLAN/: index.html
ROADMAP/: index.html
ROADMAP_STATUS_INTEGRATED/: index.html
ROLLBACK_PROCEDURES/: index.html
RUST_GATEWAY_IMPLEMENTATION/: index.html
RUST_GATEWAY_PLAN/: index.html
RUST_PYO3_INTEGRATION/: index.html
SAML_SETUP/: index.html
SECURITY/: index.html
SECURITY_AUDIT/: index.html
SECURITY_BEST_PRACTICES/: index.html
SECURITY_HARDENING/: index.html
STANDALONE_CRATES/: index.html
TASK1_COMPLETION_SUMMARY/: index.html
TESTING_STRATEGY/: index.html
TEST_COVERAGE_REPORT/: index.html
TEST_MIGRATION_GUIDE/: index.html
TOOL_SENSITIVITY_CLASSIFICATION/: index.html
TROUBLESHOOTING/: index.html
TROUBLESHOOTING_UI/: index.html
UI_DOCKER_INTEGRATION_PLAN/: index.html
UI_USER_GUIDE/: index.html
USE_CASES/: index.html
VALKEY_OPTIMIZATION/: index.html
WEEK_2_SUMMARY/: index.html
WEEK_3_SUMMARY/: index.html
WORK_BREAKDOWN_SESSIONS/: index.html
WORK_REALLOCATION/: index.html
WORK_SESSION_BREAKDOWN_REFERENCE/: index.html
WORK_TASKS/: index.html
alembic/: env.py
config/: injection_patterns.yaml  prometheus.yml
docs/: ADVANCED_OPA_POLICIES.md  ALL_WORKERS_STATUS_AND_PLANS.md  API_INTEGRATION.md  API_KEYS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_VISION.md  AUDIT_COMPLIANCE.md  AUTHENTICATION.md  (+113 more)
rust/sark-cache/: Cargo.toml  pyproject.toml
rust/sark-cache/src/: lib.rs  lru_ttl.rs  python.rs
rust/sark-cache/tests/: cache_tests.rs
rust/sark-gateway/: Cargo.toml  README.md
rust/sark-gateway/src/: main.rs
rust/sark-opa/: Cargo.toml
rust/sark-opa/src/: engine.rs  lib.rs  python.rs
(+1571 files in other folders)
