[package]
name = "sark-rust"
version = "1.6.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["James Henry"]

[lib]
name = "sark_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
# Use shared grid-core components
grid-opa = { path = "../sark-core/crates/grid-opa", features = ["python"] }
grid-cache = { path = "../sark-core/crates/grid-cache", features = ["python"] }

# Note: Internal rust/sark-opa and rust/sark-cache are deprecated.
# They remain for reference but grid-core is now the source of truth.
# See ../sark-core/README.md for details.
