[workspace]
resolver = "2"
members = [
    ".",
    "rust/sark-gateway",
]

[workspace.package]
version = "1.6.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["James Henry"]

[workspace.dependencies]
# GRID Core components
grid-opa = { path = "../grid-core/crates/grid-opa" }
grid-cache = { path = "../grid-core/crates/grid-cache" }

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Auth
jsonwebtoken = "9.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"

# CLI
clap = { version = "4.4", features = ["derive"] }

[package]
name = "sark-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "sark_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
# Use shared grid-core components (with Python features for PyO3 bindings)
grid-opa = { workspace = true, features = ["python"] }
grid-cache = { workspace = true, features = ["python"] }

# Note: Internal rust/sark-opa and rust/sark-cache are deprecated.
# They remain for reference but grid-core is now the source of truth.
# See ../grid-core/README.md for details.
