[project]
name = "sark"
version = "0.1.0"
description = "SARK - Security Audit and Resource Kontroler for MCP Governance"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "James R. A. Henry"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "python-consul>=1.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.0",
    "ldap3>=2.9.1",
    "python3-saml>=1.15.0",
    "structlog>=23.1.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "hvac>=1.1.0",
    "kubernetes>=27.0.0",
    "aiokafka>=0.8.0",
    "ldap3>=2.9.1",
    "authlib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "faker>=19.0.0",
    "factory-boy>=3.3.0",
    "bandit>=1.7.5",
    # Type stubs for mypy
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "S",     # flake8-bandit (security)
    "A",     # flake8-builtins
    "DTZ",   # flake8-datetimez
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "S101",   # use of assert (allowed in tests)
    "S104",   # possible binding to all interfaces
    "S105",   # possible hardcoded password (false positives in validation)
    "S106",   # possible hardcoded password (false positives in tests)
    "S314",   # xml parsing (using standard library ET for SAML)
    "B008",   # function call in argument defaults (required for FastAPI Depends)
    "N805",   # first argument should be self (false positive for pydantic validators)
    "C901",   # function is too complex (can be addressed later)
    "SIM102", # nested if statements (can be more readable)
    "SIM108", # use ternary operator (style preference)
    "RUF006", # asyncio.create_task without reference (background tasks)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "S110",   # try-except-pass acceptable in tests
    "S311",   # random module is acceptable in tests
    "ARG",    # unused arguments allowed in tests (fixtures)
    "FBT",    # boolean trap allowed in tests
    "SIM117", # nested with statements are more readable in tests
    "SIM105", # contextlib.suppress not always clearer in tests
    "SIM113", # enumerate not always needed in tests
    "A002",   # shadowing builtins acceptable in test fixtures
    "B017",   # blind exception assertions intentional in circuit breaker tests
    "RUF043", # regex patterns in pytest.raises are intentional
    "E402",   # import order flexible in test files like locustfile
]
"__init__.py" = ["F401"]  # unused imports allowed in __init__.py
"src/sark/api/routers/saml.py" = ["N803"]  # SAML spec requires specific parameter names
"src/sark/api/routers/export.py" = ["DTZ005"]  # datetime for file naming doesn't need tz
"src/sark/api/routers/metrics.py" = ["DTZ005"]  # datetime for metrics placeholders
"src/sark/api/routers/servers.py" = ["RUF012"]  # Pydantic Config.schema_extra is intentional
"src/sark/api/routers/websocket.py" = ["SIM105"]  # try-except-pass clearer than contextlib.suppress

[tool.ruff.lint.isort]
known-first-party = ["sark"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
show_error_codes = true
show_column_numbers = true
pretty = true
# Disable strict checks that are too restrictive for FastAPI/Pydantic
disable_error_code = ["misc", "no-any-return", "attr-defined", "type-arg", "assignment"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "consul.*",
    "hvac.*",
    "kubernetes.*",
    "aiokafka.*",
    "prometheus_client.*",
    "opentelemetry.*",
    "structlog.*",
    "faker.*",
    "factory.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "starlette.*",
    "uvicorn.*",
    "httpx.*",
    "redis.*",
    "asyncpg.*",
    "psycopg2.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "-vv",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
    "smoke: marks tests as smoke tests (quick critical path validation)",
    "e2e: marks tests as end-to-end tests",
    "critical: marks tests as critical for system health",
    "performance: marks tests as performance tests",
    "api: marks tests as API tests",
    "user_flow: marks tests as user flow tests",
    "admin_flow: marks tests as admin flow tests",
    "bulk_operations: marks tests as bulk operation tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used in general (handled by ruff S101)
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B322", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B508", "B509", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]
