[project]
name = "sark"
version = "1.3.0"
description = "SARK - Security Audit and Resource Kontroler for MCP Governance"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "James Henry"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "valkey>=5.0.0",
    "httpx>=0.25.0",
    "python-consul>=1.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.0",
    "ldap3>=2.9.1",
    "python3-saml>=1.15.0",
    "structlog>=23.1.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "hvac>=1.1.0",
    "kubernetes>=27.0.0",
    "aiokafka>=0.8.0",
    "grpcio>=1.60.0",
    "grpcio-reflection>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "black==25.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "faker>=19.0.0",
    "factory-boy>=3.3.0",
    "bandit>=1.7.5",
    "maturin>=1.4,<2.0",
    # Type stubs for mypy
    "types-valkey>=4.6.0",
    "types-passlib>=1.7.7",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
python-source = "src"
module-name = "sark._rust"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "S",     # flake8-bandit (security)
    "A",     # flake8-builtins
    "DTZ",   # flake8-datetimez
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "E722",   # bare except (TODO: fix in future PR)
    "S101",   # use of assert (allowed in tests)
    "S104",   # possible binding to all interfaces
    "S105",   # possible hardcoded password (false positives in validation)
    "S106",   # possible hardcoded password (false positives in tests)
    "S108",   # temp file usage (acceptable for controlled operations)
    "S110",   # try-except-pass (acceptable for cleanup and optional operations)
    "S311",   # pseudo-random generator (used for jitter, not cryptography)
    "S314",   # xml parsing (using standard library ET for SAML)
    "S324",   # insecure hash (MD5 used for non-crypto purposes)
    "S603",   # subprocess without shell check (controlled subprocess calls)
    "S607",   # subprocess partial path (controlled subprocess calls)
    "S608",   # SQL injection (false positive, using parameterized queries)
    "B008",   # function call in argument defaults (required for FastAPI Depends)
    "B024",   # abstract class without abstract methods (base test classes)
    "N805",   # first argument should be self (false positive for pydantic validators)
    "N806",   # variable should be lowercase (constants and type vars)
    "N818",   # error class naming (custom exception naming)
    "C901",   # function is too complex (can be addressed later)
    "A001",   # variable shadows builtin (custom exceptions like ConnectionError)
    "A004",   # import shadows builtin (custom exceptions like ConnectionError)
    "SIM102", # nested if statements (can be more readable)
    "SIM103", # return condition directly (style preference)
    "SIM105", # contextlib.suppress (style preference, try-except-pass more explicit)
    "SIM108", # use ternary operator (style preference)
    "SIM113", # enumerate (style preference)
    "RUF006", # asyncio.create_task without reference (background tasks)
    "DTZ001", # datetime without timezone (TODO: fix in future PR)
    "DTZ003", # datetime.utcnow without tz (TODO: fix in future PR)
    "DTZ005", # datetime.now without tz (TODO: fix in future PR)
    "DTZ006", # datetime.fromtimestamp without tz (TODO: fix in future PR)
    "DTZ007", # datetime.strptime without tz (TODO: fix in future PR)
    "B904",   # raise without from (TODO: add exception chaining in future PR)
    "B027",   # empty method without abstract decorator (v2.0 adapter hooks)
    "RUF001", # ambiguous unicode (intentional in bypass tests)
    "RUF003", # ambiguous unicode in comments (intentional in bypass tests)
    "RUF012", # mutable class default (TODO: fix in future PR)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "S110",   # try-except-pass acceptable in tests
    "S311",   # random module is acceptable in tests
    "ARG",    # unused arguments allowed in tests (fixtures)
    "FBT",    # boolean trap allowed in tests
    "F601",   # duplicate dict keys (intentional in security tests)
    "SIM117", # nested with statements are more readable in tests
    "SIM105", # contextlib.suppress not always clearer in tests
    "SIM113", # enumerate not always needed in tests
    "A002",   # shadowing builtins acceptable in test fixtures
    "B017",   # blind exception assertions intentional in circuit breaker tests
    "RUF043", # regex patterns in pytest.raises are intentional
    "E402",   # import order flexible in test files like locustfile
]
"__init__.py" = ["F401"]  # unused imports allowed in __init__.py
"src/sark/api/routers/saml.py" = ["N803"]  # SAML spec requires specific parameter names
"src/sark/api/routers/export.py" = ["DTZ005"]  # datetime for file naming doesn't need tz
"src/sark/api/routers/metrics.py" = ["DTZ005"]  # datetime for metrics placeholders
"src/sark/api/routers/servers.py" = ["RUF012"]  # Pydantic Config.schema_extra is intentional
"src/sark/api/routers/websocket.py" = ["SIM105"]  # try-except-pass clearer than contextlib.suppress

[tool.ruff.lint.isort]
known-first-party = ["sark"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false
show_error_codes = true
show_column_numbers = true
pretty = true
# Disable strict checks that are too restrictive for FastAPI/Pydantic
disable_error_code = ["misc", "no-any-return", "attr-defined", "type-arg", "assignment"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "consul.*",
    "hvac.*",
    "kubernetes.*",
    "aiokafka.*",
    "prometheus_client.*",
    "opentelemetry.*",
    "structlog.*",
    "faker.*",
    "factory.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "starlette.*",
    "uvicorn.*",
    "httpx.*",
    "redis.*",
    "asyncpg.*",
    "psycopg2.*",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "-vv",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "k8s: marks tests requiring kubernetes cluster (deselect with '-m \"not k8s\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
    "smoke: marks tests as smoke tests (quick critical path validation)",
    "e2e: marks tests as end-to-end tests",
    "critical: marks tests as critical for system health",
    "performance: marks tests as performance tests",
    "security: marks tests as security tests",
    "pentest: marks tests as penetration tests",
    "api: marks tests as API tests",
    "user_flow: marks tests as user flow tests",
    "admin_flow: marks tests as admin flow tests",
    "bulk_operations: marks tests as bulk operation tests",
    "v2: marks tests for future SARK v2.0 features (not yet released)",
    "federation: marks tests for federation features",
    "chaos: marks tests for chaos engineering",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used in general (handled by ruff S101)
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B322", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B508", "B509", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]
