[package]
name = "sark-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "sark_cache"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
