[package]
name = "sark-opa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "sark_opa"
crate-type = ["rlib"]

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
regorus.workspace = true
parking_lot.workspace = true
