[package]
name = "sark-opa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "sark_opa"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Regorus OPA engine
regorus = "0.2"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
pythonize = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
# Testing
pyo3 = { version = "0.22", features = ["auto-initialize"] }
